Resolve test failure caused by failure to find jjwt